--- a/example-config.yml
+++ b/example-config.yml
@@ -13,18 +13,18 @@ crawlers:
       - ".exclude" # exclude events that match this selector.
     fields: # a dictionary of fields. Only those listed below exist but not all are mandatory
       title: # Mandatory field.
-        loc: ".pos-title a" # selector for the title
+        selector: ".pos-title a" # selector for the title
         regex_extract: # a regex to extract a substring. If not provided the entire text of the given selector is used.
           exp: "[^•]*" # the actual regular expression.
           index: 0 # if the regular expression has multiple matches, only the match with the given index is used.
       comment: # not a mandatory field.
-        loc: ".event h3"
+        selector: ".event h3"
         regex_extract:
           exp: "[^•]*"
           index: 0
         max_length: 200 # If the length of the extracted text exceeds this value, the text is truncated.
       url: # an event specific url that points to page providing details about this specific event. If not given the 'main url' of this crawler is used.
-        loc: ".pos-title a"
+        selector: ".pos-title a"
         relative: true # Whether the url provided is a relative url or not.
         attr: "data-a2a-url" # The key of the attribute that contains the url. The default is 'href'.
         on_subpage: ["comment", "date"] # A list of fields that have to be extracted from the event-specific subpage and not the main page.
@@ -34,37 +34,37 @@ crawlers:
         # For specific examples that are not explained here checkout the production config, config.yml.
         # However, the way different fields are configured is identical to the ones explicitly explained below.
         day:
-          loc: "<selector>"
+          selector: "<selector>"
           layout: "<layout>"
           regex_extract:
             exp: "<regex>"
             index: 0
         month:
-          loc: "<selector>"
+          selector: "<selector>"
           layout: "<layout>"
         year:
-          loc: "<selector>"
+          selector: "<selector>"
           layout: "<layout>"
         day_month:
-          loc: "<selector>"
+          selector: "<selector>"
           layout: "<layout>"
         day_month_year_time:
-          loc: "<selector>"
+          selector: "<selector>"
           layout: "<layout>"
         day_month_year:
-          loc: ".pos-datum b" # the selector of the text that contains the day, the month and the year of the date
+          selector: ".pos-datum b" # the selector of the text that contains the day, the month and the year of the date
           # The layout is basically how the date string would look like if it were the 2. of january 2006.
           # The layout always has to be given in English. Checkout the production config file config.yml to get a
           # better understanding of how this layout field can look like.
           layout: "Monday, 2. January 2006"
         time: # similar to the explanation above.
-          loc: ".pos-einlass"
+          selector: ".pos-einlass"
           layout: "Beginn: 15:04"
           regex_extract: # a regex to extract a substring if necessary. If not given the entire string with the given selector is used.
             exp: "Beginn: [0-9]{1,2}:[0-9]{2}" # the actual regular expression.
             index: 0 # if the regular expression has multiple matches, only the match with the given index is used.
         time: # another example for time.
-          loc: ".right .time"
+          selector: ".right .time"
           layout: "Start: 15:04"
           # Sometimes multiple nodes match the given selector. Then an index can be given to chose the right one.
           # -1 means the last node. The default is 0
@@ -78,6 +78,9 @@ crawlers:
       - field: "title" # The field that has to be checked. Currently, only 'title' & 'comment' are valid values.
         regex_ignore: "CORONA TESTZENTRUM.*" # A regex matches the field values whose events should be excluded.
     paginator: # can be defined if the events are spread across multiple pages.
-      loc: ".pagination .next"
+      selector: ".pagination .next"
       relative: true
+      # Sometimes multiple nodes match the given selector. Then an index can be given to chose the right one.
+      # -1 means the last node. The default is 0
+      node_index: -1
       max_pages: 2 # default is 0 which means there is no limit.
