--- a/config.yml
+++ b/config.yml
@@ -36,8 +36,7 @@ crawlers:
               selector: ".qt-eventtable tr td"
               regex_extract:
                 exp: "Data:.*"
-              child_index: -1
-            # layout: " Data: 2 Febbraio 2022"
+              child_index: -1 # -1 means: 'apply the regex until a child matches'
             layout: "Data: 2 January 2006"
           - covers:
               time: true
@@ -46,8 +45,7 @@ crawlers:
               node_index: 2
               regex_extract:
                 exp: "Inizio concerto: .*"
-              child_index: -1
-            # layout: " Inizio concerto: 9:30 pm"
+              child_index: -1 # -1 means: 'apply the regex until a child matches'
             layout: "Inizio concerto: 3:04 pm"
         date_location: "Europe/Berlin"
         date_language: "it_IT"
@@ -166,117 +164,178 @@ crawlers:
   ##########
   # Munich
   ##########
-  # - name: Unterfahrt
-  #   type: concert
-  #   url: "https://www.unterfahrt.de/programm.php"
-  #   city: "Munich"
-  #   event: ".b-events__el"
-  #   fields:
-  #     title: 
-  #       selector: ".b-events__el-title"
-  #     comment:
-  #       selector: ".b-events__el-text"
-  #       max_length: 200
-  #     url:
-  #       selector: ".o-btn-hex__link"
-  #       relative: true
-  #     date:
-  #       day_month_year:
-  #         selector: ".b-events__el-date"
-  #         layout: "Mon•2•1•2006"
-  #         regex_extract: # In case the node contains more than just the desired string the substring can be determined with a regex
-  #           exp: "[A-Za-z]{2}•[0-9]{1,2}•[0-9]{1,2}•[0-9]{4}"
-  #           index: 0
-  #       time:
-  #         selector: ".b-events__el-date"
-  #         layout: "15••04"
-  #         regex_extract:
-  #           exp: "[0-9]{2}••[0-9]{2}"
-  #           index: -1
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
+  - name: Unterfahrt
+    type: concert
+    url: "https://www.unterfahrt.de/programm.php"
+    city: "Munich"
+    event: ".b-slider__el"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".b-highlight__text-title"
+      - name: "comment"
+        type: "text"
+        location:
+          selector: ".b-text-one-col__col_1 p"
+          max_length: 200
+        on_subpage: "url"
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".o-btn-hex__link"
+        relative: true
+      - name: "date"
+        type: "date"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+            location:
+              selector: ".b-highlight__text-date"
+            layout: "2•1•06"
+          - covers:
+              time: true
+            location:
+              selector: ".b-highlight__text-time"
+            layout: "15••04"
+        date_location: "Europe/Berlin"
+        date_language: "de_DE"
 
-  # - name: ImportExport
-  #   type: concert
-  #   url: "https://import-export.cc/"
-  #   city: "Munich"
-  #   event: ".events a"
-  #   exclude_with_selector: 
-  #     - ".old" # events that have a node with this class will be excluded from the results.
-  #   fields:
-  #     url:
-  #       selector: ""
-  #       on_subpage: ["date"]
-  #     title:
-  #       selector: ".io-title"
-  #     date:
-  #       day_month_year:
-  #         selector: ".event .event-info .io-big"
-  #         layout: "Mon. 2.1.06"
-  #         node_index: 0
-  #       time:
-  #         selector: ".event .event-info .io-big"
-  #         node_index: 3 # We need this in case there are multiple nodes that would be selected with the given loc
-  #         layout: "Beginn: 15.04"
-  #       location: "Europe/Berlin"
-  #       language: de_DE
+  - name: ImportExport
+    type: concert
+    url: "https://import-export.cc/"
+    city: "Munich"
+    event: ".events a"
+    exclude_with_selector: 
+      - ".old" # events that have a node with this class will be excluded from the results.
+    fields:
+      - name: "url"
+        type: "url"
+        location:
+          selector: ""
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".io-title"
+      - name: "date"
+        type: "date"
+        on_subpage: "url"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+            location:
+              selector: ".event .event-info .io-big"
+              node_index: 0
+            layout: "Mon. 2.1.06"
+          - covers:
+              time: true
+            location:
+              selector: ".event .event-info .io-big"
+              node_index: 3 # We need this in case there are multiple nodes that would be selected with the given selector
+            layout: "Beginn: 15.04"
+        date_location: "Europe/Berlin"
+        date_language: de_DE
       
-  # - name: Milla
-  #   type: concert
-  #   city: Munich
-  #   url: "https://www.milla-club.de/category/event/"
-  #   event: ".preview-box-outline"
-  #   fields:
-  #     url:
-  #       selector: ".post-title a"
-  #     title:
-  #       selector: ".post-title a"
-  #     date:
-  #       day:
-  #         selector: ".post-date-day"
-  #         layout: "02"
-  #       month:
-  #         selector: ".post-date-month"
-  #         layout: "Jan"
-  #       year:
-  #         selector: ".post-date-year"
-  #         layout: "2006"
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
+  - name: Milla
+    type: concert
+    city: Munich
+    url: "https://www.milla-club.de/category/event/"
+    event: ".preview-box-outline"
+    fields:
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".post-title a"
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".post-title a"
+      - name: "date"
+        type: "date"
+        components:
+          - covers:
+              day: true
+            location:
+              selector: ".post-date-day"
+            layout: "02"
+          - covers:
+              month: true
+            location:
+              selector: ".post-date-month"
+            layout: "Jan"
+          - covers:
+              year: true
+            location:
+              selector: ".post-date-year"
+            layout: "2006"
+        date_location: "Europe/Berlin"
+        date_language: "de_DE"
+    filters:
+      - field: "title"
+        regex_ignore: ".*abgesagt.*"
+      - field: "title"
+        regex_ignore: ".*verlegt.*"
+      - field: "title"
+        regex_ignore: ".*verschoben.*"
+    
 
-  # - name: Backstage
-  #   type: concert
-  #   city: Munich
-  #   url: "https://backstage.info/veranstaltungen-2/alle-veranstaltungen"
-  #   event: ".event"
-  #   fields:
-  #     title:
-  #       selector: ".pos-title a"
-  #     comment:
-  #       selector: ".event h3"
-  #     url:
-  #       selector: ".pos-title a"
-  #       relative: true
-  #       on_subpage: ["comment", "date"]
-  #     date:
-  #       day_month_year:
-  #         selector: ".pos-datum b"
-  #         layout: "Monday, 2. January 2006"
-  #       time:
-  #         selector: ".pos-einlass"
-  #         layout: "Beginn: 15:04"
-  #         regex_extract:
-  #           exp: "Beginn: [0-9]{1,2}:[0-9]{2}"
-  #           index: 0
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
-  #   filters:
-  #     - field: "title"
-  #       regex_ignore: "CORONA TESTZENTRUM.*"
-  #   paginator:
-  #     selector: ".pagination .next"
-  #     relative: true
-  #     max_pages: 2 # otherwise this crawler takes ages.
+  - name: Backstage
+    type: concert
+    city: Munich
+    url: "https://backstage.info/veranstaltungen-2/alle-veranstaltungen"
+    event: ".event"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".pos-title a"
+      - name: "comment"
+        type: "text"
+        location:
+          selector: ".event h3"
+        on_subpage: "url"
+        can_be_empty: true
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".pos-title a"
+        relative: true
+      - name: "date"
+        type: "date"
+        on_subpage: "url"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+            location:
+              selector: ".pos-datum b"
+            layout: "Monday, 2. January 2006"
+          - covers:
+              time: true
+            location:
+              selector: ".pos-einlass"
+              regex_extract:
+                exp: "Beginn: [0-9]{1,2}:[0-9]{2}"
+                index: 0
+            layout: "Beginn: 15:04"
+        date_location: "Europe/Berlin"
+        date_language: "de_DE"
+    filters:
+      - field: "title"
+        regex_ignore: "CORONA TESTZENTRUM.*"
+      - field: "title"
+        regex_ignore: ".*[A|a][B|b][G|g][E|e][S|s][A|a][G|g][T|t].*"
+      - field: "title"
+        regex_ignore: ".*[V|v][E|e][R|r][L|l][E|e][G|g][T|t].*"
+    paginator:
+      selector: ".pagination .next"
+      relative: true
+      max_pages: 2 # otherwise this crawler takes ages.
 
   # - name: Strom
   #   type: concert
