--- a/config.yml
+++ b/config.yml
@@ -337,62 +337,92 @@ crawlers:
       relative: true
       max_pages: 2 # otherwise this crawler takes ages.
 
-  # - name: Strom
-  #   type: concert
-  #   city: Munich
-  #   url: "https://strom-muc.de/"
-  #   event: ".gdlr-event-item"
-  #   exclude_with_selector:
-  #     - ".cancelled-button"
-  #     - ".coming-soon"
-  #   fields:
-  #     title:
-  #       selector: ".event-title a"
-  #     url:
-  #       selector: ".event-title a"
-  #       on_subpage: ["date"]
-  #     date:
-  #       day_month_year:
-  #         selector: ".gdlr-info-date"
-  #         layout: "02.01.2006"
-  #         regex_extract:
-  #           exp: "([0-9]{2}\\.){2}[0-9]{4}"
-  #       time:
-  #         selector: ".gdlr-info-time"
-  #         layout: "15.04"
-  #         regex_extract:
-  #           exp: "[0-9]{2}(\\.|:)[0-9]{2}"
-  #           index: -1
-  #       location: "Europe/Berlin"
+  - name: Strom
+    type: concert
+    city: Munich
+    url: "https://strom-muc.de/"
+    event: ".gdlr-event-item"
+    exclude_with_selector:
+      - ".cancelled-button"
+      - ".coming-soon"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".event-title a"
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".event-title a"
+      - name: "date"
+        type: "date"
+        on_subpage: "url"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+            location:
+              selector: ".gdlr-info-date"
+              child_index: 1
+              regex_extract:
+                exp: "([0-9]{2}\\.){2}[0-9]{4}"
+            layout: "02.01.2006"
+          - covers:
+              time: true
+            location:
+              selector: ".gdlr-info-time"
+              child_index: 1
+              regex_extract:
+                exp: "[0-9]{2}(\\.|:)[0-9]{2}"
+                index: -1
+            layout: "15.04"
+        date_location: "Europe/Berlin"
 
-  # - name: Muffatwerk
-  #   type: concert
-  #   city: Munich
-  #   url: "https://www.muffatwerk.de/de/events/concert"
-  #   event: ".row .event"
-  #   fields:
-  #     title:
-  #       selector: ".hover-in .center span"
-  #     url:
-  #       selector: ".hover-in .right a"
-  #       relative: true
-  #     date:
-  #       day_month:
-  #         selector: ".hover-in .center"
-  #         layout: "02.01. "
-  #         regex_extract:
-  #           exp: "([0-9]{2}\\.){2}\\s"
-  #       year:
-  #         selector: ".date"
-  #         layout: "06	" # the whitespace in this string is a tab.
-  #         regex_extract:
-  #           exp: "[0-9]{2}\\s"
-  #       time:
-  #         selector: ".hover-in .center"
-  #         layout: "15:04"
-  #         regex_extract:
-  #           exp: "[0-9]{2}:[0-9]{2}"
-  #       location: "Europe/Berlin"
+  - name: Muffatwerk
+    type: concert
+    city: Munich
+    url: "https://www.muffatwerk.de/de/events/concert"
+    event: ".row .event"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".hover-in .center span"
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".hover-in .right a"
+        relative: true
+      - name: "date"
+        type: "date"
+        components:
+          - covers:
+              day: true
+              month: true
+            location:
+              selector: ".hover-in .center"
+              child_index: -1
+              regex_extract:
+                exp: "([0-9]{2}\\.){2}\\s"
+            layout: "02.01. "
+          - covers:
+              year: true
+            location:
+              selector: ".date"
+              child_index: -1
+              regex_extract:
+                exp: "[0-9]{2}\\s"
+            layout: "06	" # the whitespace in this string is a tab.
+          - covers:
+              time: true
+            location:
+              selector: ".hover-in .center"
+              child_index: -1
+              regex_extract:
+                exp: "[0-9]{2}:[0-9]{2}"
+            layout: "15:04"
+        date_location: "Europe/Berlin"
 
   # ##########
   # # Paris
