--- a/config.yml
+++ b/config.yml
@@ -699,97 +699,137 @@ crawlers:
         date_location: "Europe/Berlin"
         date_language: "de_DE"
         
-  # - name: Mascotte
-  #   type: concert
-  #   city: Zurich
-  #   url: "https://www.mascotte.ch/nu/events/event_list_type/2"
-  #   event: ".nu-e-concert"
-  #   fields:
-  #     title: 
-  #       selector: ".screen-only h2"
-  #     comment:
-  #       selector: ".nu-e-subt"
-  #     url:
-  #       selector: ".nu-e-link-share"
-  #       attr: "data-a2a-url"
-  #     date:
-  #       day_month_year:
-  #         selector: ".screen-only .nu-e-date"
-  #         layout: "2.1.06"
-  #         regex_extract:
-  #           exp: "([0-9]{1,2}\\.){2}[0-9]{2}"
-  #           index: 0
-  #       time:
-  #         selector: ".nu-e-time-age"
-  #         layout: "15.04"
-  #         regex_extract:
-  #           exp: "[0-9]{2}\\.[0-9]{2}"
-  #           index: 1 
-  #       location: "Europe/Berlin"
+  - name: Mascotte
+    type: concert
+    city: Zurich
+    url: "https://www.mascotte.ch/nu/events/event_list_type/2"
+    event: ".nu-e-concert"
+    fields:
+      - name: "title"
+        type: "text"
+        location: 
+          selector: ".screen-only h2"
+      - name: "comment"
+        type: "text"
+        can_be_empty: true
+        location:
+          selector: ".nu-e-subt"
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".nu-e-link-share"
+          attr: "data-a2a-url"
+      - name: "date"
+        type: "date"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+            location:
+              selector: ".screen-only .nu-e-date"
+              regex_extract:
+                exp: "([0-9]{1,2}\\.){2}[0-9]{2}"
+                index: 0
+            layout: "2.1.06"
+          - covers:
+              time: true
+            location:
+              selector: ".nu-e-time-age"
+              regex_extract:
+                exp: "[0-9]{2}\\.[0-9]{2}"
+                index: 1
+            layout: "15.04"
+        date_location: "Europe/Berlin"
 
-  # - name: Kaufleuten
-  #   type: concert
-  #   city: Zurich
-  #   url: "https://kaufleuten.ch/events/kultur/konzerte/"
-  #   event: ".event"
-  #   fields:
-  #     title:
-  #       selector: "h3"
-  #       regex_extract:
-  #         exp: "[^•]*"
-  #         index: 0
-  #     comment:
-  #       selector: ".subtitle strong"
-  #     url:
-  #       selector: ".event-link"
-  #       on_subpage: ["date"]
-  #     date:
-  #       day_month_year:
-  #         selector: ".event-meta time"
-  #         layout: "Monday, 02.01.2006"
-  #         regex_extract:
-  #           exp: "[a-zA-Z]+,\\s([0-9]{2}\\.){2}[0-9]{4}"
-  #           index: 0
-  #       time:
-  #         selector: ".event-meta .quick-facts li"
-  #         layout: "15:04"
-  #         node_index: 2 # if there are still multiple text nodes under this node the first one that results in a regex match, will be used
-  #         regex_extract:
-  #           exp: "[0-9]{2}:[0-9]{2}"
-  #           index: 0
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
+  - name: Kaufleuten
+    type: concert
+    city: Zurich
+    url: "https://kaufleuten.ch/events/kultur/konzerte/"
+    event: ".event"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: "h3"
+          regex_extract:
+            exp: "[^•]*"
+            index: 0
+      - name: "comment"
+        type: "text"
+        can_be_empty: true
+        location:
+          selector: ".subtitle strong"
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".event-link"
+      - name: "date"
+        type: "date"
+        on_subpage: "url"
+        components:
+          - covers:
+              day: true
+              month: true
+              year: true
+              time: true
+            location:
+              selector: ".event-meta time"
+              attr: "datetime"
+            layout: "2006-01-02T15:04:05-07:00"
+        date_location: "Europe/Berlin"
+        date_language: "de_DE"
+    filters:
+      - field: "title"
+        regex_ignore: "Verschoben.*"
+      - field: "title"
+        regex_ignore: "Abgesagt.*"
 
-  # - name: Tonhalle
-  #   type: concert
-  #   city: Zurich
-  #   url: "https://www.tonhalle-orchester.ch/en/home-tz/konzerte/kalender/"
-  #   event: ".js-calendarlist-list .data"
-  #   fields:
-  #     title:
-  #       selector: ".event h3"
-  #     comment:
-  #       selector: ".member .member-name"
-  #       node_index: 1
-  #     url:
-  #       selector: ".desktop-linkoverlay"
-  #       relative: true
-  #     date:
-  #       day_month:
-  #         selector: ".col-left .date"
-  #         layout: "2. Jan"
-  #         regex_extract:
-  #           exp: "[0-9]{1,2}\\.\\s[a-zA-Z]{3}"
-  #       time:
-  #         selector: ".col-left .hour"
-  #         layout: "15.04"
-  #         regex_extract:
-  #           exp: "[0-9]{1,2}\\.[0-9]{2}"
-  #       location: "Europe/Berlin"
-  #       language: "de_DE"
-  #   paginator:
-  #     selector: ".MarkupPagerNavNext a"
-  #     relative: true
+
+  - name: Tonhalle
+    type: concert
+    city: Zurich
+    url: "https://www.tonhalle-orchester.ch/en/home-tz/konzerte/kalender/"
+    event: ".js-calendarlist-list .data"
+    fields:
+      - name: "title"
+        type: "text"
+        location:
+          selector: ".event h3"
+      - name: "comment"
+        type: "text"
+        location:
+          selector: ".member .member-name"
+          node_index: 1
+        can_be_empty: true
+      - name: "url"
+        type: "url"
+        location:
+          selector: ".desktop-linkoverlay"
+        relative: true
+      - name: "date"
+        type: "date"
+        components:
+          - covers:
+              day: true
+              month: true
+            location:
+              selector: ".col-left .date"
+              regex_extract:
+                exp: "[0-9]{1,2}\\.\\s[a-zA-Z]{3}"
+            layout: "2. Jan"
+          - covers:
+              time: true
+            location:
+              selector: ".col-left .hour"
+              regex_extract:
+                exp: "[0-9]{1,2}\\.[0-9]{2}"
+            layout: "15.04"
+        date_location: "Europe/Berlin"
+        date_language: "de_DE"
+    paginator:
+      selector: ".MarkupPagerNavNext a"
+      relative: true
 
   # - name: Heldenbar
   #   type: concert
